# jnipp

./: .gitignore  jnipp.vcxproj
android-jni-wrappers/: CMakeLists.txt  android.content.cpp  android.content.h  android.content.impl.h  cmake_build_android.py
tests/: tests.vcxproj
